# fost-android-java

./: .cproject  .gitignore  .gitmodules  .project  AndroidManifest.xml  ChangeLog  README.md
jni/: Android.mk  Application.mk  CMakeLists.txt  assets.cpp  assets.hpp  downloader.cpp  fost-android.cpp  fost-android.hpp  logger.cpp  messaging.cpp  messaging.hpp  setting.cpp  view-assets.cpp  wallet.cpp  webserver.cpp  webserver.hpp
jni/opt/crashlytics/: Android.mk  CMakeLists.txt  logger.cpp
res/values/: strings.xml
src/com/felspar/android/: Asset.java  Logger.java  Messaging.kt  NDKActivity.java  Setting.java  Wallet.java  WebServer.java
